# Open_Forge

./: README.md
p1-parser/: .gitignore  README.md  pyproject.toml
p1-parser/configs/: default.yaml
p1-parser/corpus/: .gitkeep
p1-parser/corpus/archive/: ARCHIVE_LOG.md
p1-parser/corpus/golden/: CORPUS_MANIFEST.md  README.md  TI_INA219_v1_ground_truth.json  TI_LM5176_v1_ground_truth.json  TI_SN74LVC1G04_v1_ground_truth.json  TI_TLV7021_v1_ground_truth.json  TI_TPS62933_v1_ground_truth.json  validate_ground_truth.py
p1-parser/docker/: .gitkeep
p1-parser/eval/phase1/: PHASE1_RESULTS.md  metrics.py  run_eval.py
p1-parser/eval/phase2/: PHASE2_RESULTS.md  metrics.py  run_eval.py
p1-parser/eval/spike/: SPIKE_RESULTS.md  run_spike.py
p1-parser/models/: .gitkeep  README.md
p1-parser/scripts/: download_models.py
p1-parser/src/: config.py  logging_config.py
p1-parser/src/phase1_dla/: __init__.py  classify_section.py  detect.py  footnote_linker.py  multipage_merge.py  pdf_offset.py  rasterize.py  runner.py
p1-parser/src/phase2_tsr/: __init__.py  confidence_scorer.py  merged_cell_handler.py  path_a_vector.py  path_b_vlm.py  runner.py
p1-parser/src/phase3_extract/: __init__.py  absolute_max_extractor.py  extractor.py  footnote_resolver.py  parameter_extractor.py  pinout_extractor.py  prompt_templates.py  runner.py  table_utils.py  unit_normalizer.py  validation.py
p1-parser/src/phase4_validate/: __init__.py  absolute_max_rules.py  cross_parameter_rules.py  kicad_exporter.py  ordering_rules.py  runner.py  sanity_ranges.py  validator.py
p1-parser/src/schemas/: __init__.py  datasheet.py  pipeline.py
p1-parser/src/utils/: exceptions.py
p1-parser/tests/fixtures/: __init__.py  phase1_mock_outputs.py  phase2_mock_outputs.py  phase3_mock_outputs.py
p1-parser/tests/integration/: test_phase1_e2e.py  test_phase2_e2e.py  test_phase3_e2e.py  test_phase4_e2e.py
p1-parser/tests/unit/: test_config.py  test_phase1_classify.py  test_phase1_detect.py  (+27 more)
(+31 files in other folders)
